exports[`test should render one flow 1`] = `
<div
  className="concise-issue-locations pull-right">
  <ConciseIssueLocationBadge
    count={3}
    onClick={[Function]}
    selected={false} />
</div>
`;

exports[`test should render secondary locations 1`] = `
<div
  className="concise-issue-locations pull-right">
  <ConciseIssueLocationBadge
    count={3}
    selected={true} />
</div>
`;

exports[`test should render several flows 1`] = `
<div
  className="concise-issue-locations pull-right">
  <ConciseIssueLocationBadge
    count={3}
    onClick={[Function]}
    selected={false} />
  <ConciseIssueLocationBadge
    count={2}
    onClick={[Function]}
    selected={false} />
  <ConciseIssueLocationBadge
    count={3}
    onClick={[Function]}
    selected={false} />
</div>
`;
